# chp-os

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  grub.cfg  i686-elf-gcc.cmake  i686-elf-none.cmake  package-iso.sh  run-gdb.gdb  run-qemu.sh
crt/: CMakeLists.txt  crtn.s
kernel/: CMakeLists.txt  crti.s  kernel.c  linker.ld  memory.c  ps2.c  start.s  term.c
kernel/include/: commondefs.h  memory.h  printf.h  printutil.h  ps2.h  term.h
kernel/src/: kernel.c
kernel/src/boot/: multiboot.h
kernel/src/common/: assert.h
kernel/src/io/: inout.h
kernel/src/io/arch/i686/: inout.c
kernel/src/io/ps2/: ps2.c  ps2.h
kernel/src/io/tty/: tty.c  tty.h
kernel/src/log/: log.c  log.h
kernel/src/system/: asm_bits.s  interrupt.c  interrupt.h  segment.c  segment.h
libc/: CMakeLists.txt  stdio.c  string.c
libc/include/: stdio.h
